tests/baselines/reference/globalThisDeclarationEmit.errors.txt
index.ts(2,14): error TS4025: Exported variable 'globalThis' has or is using private name 'globalThis'.


==== index.ts (1 errors) ====
    import { variable } from "./variable";
    export const globalThis = variable;
                 ~~~~~~~~~~
!!! error TS4025: Exported variable 'globalThis' has or is using private name 'globalThis'.
    
==== variable.ts (0 errors) ====
    export const variable = globalThis;